--- a/classificationDocument/templates/classificationDocument/upload.html
+++ b/classificationDocument/templates/classificationDocument/upload.html
@@ -4,18 +4,15 @@
 <div class="description">Загрузите свой файл и узнайте полное описание </div>
 <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Загрузить</button>
 
+    {% for f in form %}
+    <p>{{ f }}</p>
+    <div class="form-error">{{ f.errors }}</div>
+    {% endfor %}
+    <div class="buttons">
+        <button class="button-arounder" type="submit">Загрузить</button>
+</div>
 </form>
-{% if messages %}
-		<div class="messages">
-		{% for message in messages %}
-			<div class="alert {{message.tags}}}">
-				{{ message }}
-			</div>
-		{% endfor %}
-		</div>
-{% endif %}
+
 
 {% endblock %}
