--- a/classificationDocument/templates/classificationDocument/upload.html
+++ b/classificationDocument/templates/classificationDocument/upload.html
@@ -28,6 +28,6 @@
         </script>
 </div>
 </form>
-<div class="telegram">У нас ивеется еще свой бот в <a href="https://t.me/Gemini_Patriot_bot">Telegram!</a> Опробуй его скорей!</div>
+<div class="telegram">У нас имеется еще свой бот в <a href="https://t.me/Gemini_Patriot_bot">Telegram!</a> Опробуй его скорей!</div>
 
 {% endblock %}
