--- a/classificationDocument/templates/classificationDocument/upload.html
+++ b/classificationDocument/templates/classificationDocument/upload.html
@@ -1,6 +1,6 @@
 {% extends 'classificationDocument/base.html' %}
 {% block content %}
-<div class="head">Bitcoin Bandits</div>
+<div class="head">Gemini Patriot от Bitcoin Bandits</div>
 <div class="description">Вас рад приветствовать <b>Gemini Patriot от Bitcoin Bandits</b><br/>Я очень мощный помощник, в моей основе лежат <b>нейросети имеющие 72.3B параметров.</b>
 <br/>
 Я способен определять класс документа, а так же выводить ключевую информации, прочитав Ваш документ.
