fix README, main and uploads

--- a/classificationDocument/templates/classificationDocument/upload.html
+++ b/classificationDocument/templates/classificationDocument/upload.html
@@ -22,7 +22,7 @@
         <script>
         document.addEventListener("DOMContentLoaded", function() {
             document.getElementById("upload-btn").addEventListener("click", function() {
-                alert("Анализируем файл, скоро вернемся с ответом.");
+                alert("Анализируем файл! Чтобы продолжить, закройте окно и ожидайте ответа.");
             });
         });
         </script>
